Created css file changed img again and added text for intro

--- a/src/main/resources/templates/intro.html
+++ b/src/main/resources/templates/intro.html
@@ -5,6 +5,10 @@
     <title>Menu</title>
 </head>
 <body>
-<img th:src="@{/images/Menu.png}"/>
+<div id="introText">
+    <p id="IntroPart1">In a little town outside Connecticut lives the couple Ed and Lorrain Warren
+        famous for their investigations of supernatural activitys and work with cases where paranormal activitys has ouccured.</p>
+</div>
+<img id="intro" th:src="@{/images/introBase.jpg}"/>
 </body>
 </html>
