+ new base for fight. name-change. Css proposition

--- a/src/main/resources/static/samara.css
+++ b/src/main/resources/static/samara.css
@@ -2,25 +2,25 @@
     color: white;
     font-family: Castellar;
     font-size: 0.9em;
-    line-height: 0.6em;
+    line-height: 0.4em;
     font-weight: 450;
 }
 
-.base_for_fight {
+.samaraBase {
     display: block;
-    width: 650px;
-    height: 500px;
-    margin: 100px auto auto auto;
+    width: 950px;
+    height: 700px;
+    margin: 10px auto auto auto;
 }
 
 .text-box   {
     position: absolute;
     margin-left: 500px;
-    margin-top: 315px;
+    margin-top: 525px;
 }
 
 .decision-box   {
     position: absolute;
-    margin-left: 620px;
-    margin-top: 380px;
+    margin-left: 510px;
+    margin-top: 570px;
 }
