--- a/src/main/resources/templates/samara.html
+++ b/src/main/resources/templates/samara.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Samara</title>
 
-    <link rel="stylesheet" type="text/css" href="/fight-1.css">
+    <link rel="stylesheet" type="text/css" href="/samara.css">
 </head>
 <body>
 
@@ -17,7 +17,9 @@
         <p>Make your next move:</p>
     </div>
 
-    <img src="https://i.ibb.co/JccJYph/Samara-base.png" alt="Samara-base" border="0" class="base_for_fight">
+    <img id="samaraBase" class= "samaraBase" th:src="@{/images/samaraBase.jpg}">
+
+
 
 </body>
 </html>
