--- a/src/main/resources/templates/samara.html
+++ b/src/main/resources/templates/samara.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Samara</title>
@@ -17,9 +17,9 @@
         <p>Make your next move:</p>
     </div>
 
-    <img id="samaraBase" class= "samaraBase" th:src="@{/images/samaraBase.jpg}">
+    <img id="samaraBase" class="samaraBase" th:src="@{/images/samaraBase.jpg}">
 
-
+    <script th:src="@{webjars/jquery/3.1.1/jquery.js}"></script>
 
 </body>
 </html>
