--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,14 +2,12 @@
 <html lang="en" xmlns:th="http//:www.thymeleaf.org">
 <head>
     <link rel="stylesheet" type="text/css" href="/style.css">
+    <script type="text/javascript" src="/menuSound.css">
     <meta charset="UTF-8">
     <title>horror-game</title>
 </head>
 <body>
-<audio autoplay loop>
 
-    <source src="soundfiles/menuSound.mp3" type="audio/mpeg">
-</audio>
         <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fs-media-cache-ak0.pinimg.com%2F736x%2F05%2F75%2Fc4%2F0575c46fec4eb0005a66d79a255e2dcf.jpg&f=1&nofb=1">
 
 </body>
