Changed pictures and one p-tag in intro.html

--- a/src/main/resources/templates/intro.html
+++ b/src/main/resources/templates/intro.html
@@ -23,6 +23,8 @@
     <p id="introPart4">You´ll have to search for the answers in the spirit world and no one knows what you will find there...
         but one thing is certain.
         You have to hurry up before it is to late!</p>
+    <p id="startPart1">Choose which door you want to enter by clicking on one of them.</p>
+
 </div>
 </body>
 </html>
