--- a/src/main/resources/templates/intro.html
+++ b/src/main/resources/templates/intro.html
@@ -8,7 +8,11 @@
 <body>
 
 <div class="container">
-<img th:src="@{/images/introBase.jpg}"/>
+<img id="IntroBase" th:src="@{/images/introBase.jpg}"/>
+    <img id="IntroBase2" th:src="@{/images/introBase2.jpg}"/>
+    <img id="gameStartImg" th:src="@{/images/gameStart.jpg}"/>
+    <img id="doorIntroImg" th:src="@{/images/doorIntro.jpg}"/>
+
 <p id="introPart1">In a little town outside Connecticut lives the couple Ed and Lorrain Warren
     famous for their investigations of supernatural activitys and work with cases where paranormal activitys has ouccured.</p>
 
@@ -23,8 +27,12 @@
     <p id="introPart4">You´ll have to search for the answers in the spirit world and no one knows what you will find there...
         but one thing is certain.
         You have to hurry up before it is to late!</p>
-    <p id="startPart1">Choose which door you want to enter by clicking on one of them.</p>
+
+    <p id="gameStart">Choose which way you want to go by clicking on one of the arrows.</p>
+
+    <p id="doorIntro">Choose which door you want to enter by clicking on one of them.</p>
 
 </div>
+<script th:src="@{/js/introView.js}"></script>
 </body>
 </html>
