--- a/src/main/resources/templates/samara.html
+++ b/src/main/resources/templates/samara.html
@@ -10,11 +10,16 @@
     <script th:src="@{/js/samara.js}"></script>
 </head>
 <body>
+    <div class="container">
 
-    <button class="knapp">knapp</button>
+
     <img id="samaraBase" class= "samaraBase" th:src="@{/images/start_samara.jpg}">
 
+    <div class="statsAndButtons">
 
+    </div>
+
+    </div>
 
 </body>
 </html>
