Updated buttons for startMenu and made them clickable

--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -1,5 +1,13 @@
 h1{
     color: green;
 }
+.span{
 
+margin-bottom: auto;
+position: absolute;
+border: none;
+cursor: pointer;
+display:block;
+    padding:5px;
+}
 
