--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,7 +8,12 @@
 </head>
 <body>
 <img th:src="@{/images/Menu.jpg}"/>
+<span>
+<button id="startButton" className="startButton"><img th:src="@{/images/startBtn}" width="50x50"></button>
+<button id="exitButton" className="exitButton"><img th:src="@{/images/exitBtn}" width="70x70"></button>
+<button id="resumeButton" className="resumeButton"><img th:src="@{/images/resumeBtn}" width="70x70"></button>
         <!--<img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fs-media-cache-ak0.pinimg.com%2F736x%2F05%2F75%2Fc4%2F0575c46fec4eb0005a66d79a255e2dcf.jpg&f=1&nofb=1">-->
 <script th:src="@{/js/introView.js}"></script>
-</body>
+    </span>
+    </body>
 </html>
