--- a/src/main/resources/templates/intro.html
+++ b/src/main/resources/templates/intro.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http//:www.w3.org/1999/xhtml">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <link rel="stylesheet" type="text/css" href="/intro.css">
     <meta charset="UTF-8">
