--- a/src/main/resources/templates/intro.html
+++ b/src/main/resources/templates/intro.html
@@ -12,6 +12,7 @@
     <img id="introBase2Img" th:src="@{/images/introBase2.jpg}"/>
     <img id="gameStartImg" th:src="@{/images/gameStart.jpg}"/>
     <img id="doorIntroImg" th:src="@{/images/doorIntro.jpg}"/>
+    <img class="nextButton" src="images/nextBtn.jpg" width="100x100"/>
 
 <p id="introText1">In a little town outside Connecticut lives the couple Ed and Lorrain Warren
     famous for their investigations of supernatural activitys and work with cases where paranormal activitys has ouccured.</p>
