--- a/src/main/resources/static/annabelle.css
+++ b/src/main/resources/static/annabelle.css
@@ -1,28 +1,42 @@
-div p{
+.annabelleDiv{
     font-family: Castellar;
     color:white;
     position:relative;
     text-align: center;
 }
+.annabelleDoor,.annabelleScene1,.annabelleScene2,.annabelleScene3,.annabelleScene4,.annabelleScene5,.youWin{
+    width: 100%;
+    min-height: 100%;
+}
 .talkBubble1{
-    top:80%;
-    left:50%;
+    position:absolute;
+    top:78%;
+    left:35%;
 }
 .talkBubble2,.talkBubble3{
+    position:absolute;
     top:60%;
     left:70%;
 }
-.nextButton{
+.nextButton,.fightButton,.escapeButton{
     margin-bottom: auto;
-    top: 85%;
-    left: 70%;
-    position: absolute;
     border: none;
     cursor: pointer;
+    background: rgba(0,0,0,0.0);
+    width: 55px;
+}
+.nextBtn{
+    position: absolute;
+    top: 85%;
+    left: 80%;
 }
 .fightButton{
-
+    position: absolute;
+    top: 85%;
+    left: 37%;
 }
 .escapeButton{
-
+    position: absolute;
+    top: 85%;
+    left: 52%;
 }
