--- a/src/main/resources/templates/annabelle.html
+++ b/src/main/resources/templates/annabelle.html
@@ -8,11 +8,11 @@
     <title>Annabelle Fight</title>
 </head>
 <body>
-<div class="annabelleDiv">
-    <img class="annabelleDoor" th:src="@{/images/annabelleFight/annabelleDoor.jpg}">
+<div id="annabelleDiv">
+    <!--<img class="annabelleDoor" th:src="@{/images/annabelleFight/annabelleDoor.jpg}">
     <button class="fightBtn"><img th:src="@{/images/fight_button.jpg}" width="100x100"></button>
     <button class="escapeBtn"><img th:src="@{/images/escape_button.jpg}" width="100x100"></button>
-    <img class="nextBtn"th:src="@{/images/nextBtn.jpg}" width="100x100">
+    <img class="nextBtn"th:src="@{/images/nextBtn.jpg}" width="100x100">-->
 </div>
 <script th:src="@{webjars/jquery/3.1.1/jquery.js}"></script>
 <script th:src="@{/js/annabelleView.js}"></script>
