Sena, Julia, Sebastian, Niklas co-coding: changed background to html instead of css

--- a/src/main/resources/static/chucky.css
+++ b/src/main/resources/static/chucky.css
@@ -1,5 +1,5 @@
 .chuckymain {
-    background: url('images/chuckydoor.png');
+  /*  background: url('images/chuckydoor.png');*/
     max-width: 1000px;
     min-width: 1000px;
     min-height: 750px;
