+placing itemDiv to contain player_items

--- a/src/main/resources/static/samara.css
+++ b/src/main/resources/static/samara.css
@@ -6,24 +6,90 @@
 /*    font-weight: 450;*/
 /*}*/
 
-#fightSamara    {
-    position: relative;
-    width: 50%;
-    height: 50%;
-    margin: 2% auto auto auto;
-}
-
 .mainDiv {
     position: relative;
-    min-width: 1000px;
-    max-width: 1050px;
-    min-height: 1000px;
-    max-height: 1050px;
+    min-width: 700px;
+    max-width: 800px;
+    min-height: 700px;
+    max-height: 800px;
 }
 
-#winnerFrame    {
-    height: 460px;
+#fightSamara    {
+    position: absolute;
+    min-width: 600px;
+    max-width: 800px;
+    min-height: 700px;
+    max-height: 800px;
 }
+
+#itemDiv img    {
+    padding: 7px;
+}
+
+.itemImage    {
+    max-width: 80px;
+    max-height: 120px;
+    position: absolute;
+    width: 60px;
+    height: 90px;
+}
+
+button  {
+    background: grey;
+    display:inline-block;
+    padding:0.3em 1.2em;
+    margin:0 0.1em 0.1em 0;
+    border:0.16em solid rgba(255,255,255,0);
+    border-radius:2em;
+    color: #d2d2d2;
+    box-sizing: border-box;
+    text-decoration:none;
+    font-family:'Roboto',sans-serif;
+    font-weight:550;
+    text-shadow: 0 0.04em 0.04em rgba(0,0,0,0.35);
+    text-align:center;
+    transition: all 0.2s;
+    cursor: pointer;
+}
+
+#greeting   {
+    font-size: 1.1em;
+    color: #d2d2d2;
+    position: absolute;
+    font-weight: 500;
+    top: 518px;
+    left: 184px;
+}
+
+#fightButton   {
+    position: absolute;
+    top: 639px;
+    left: 225px;
+}
+
+#escapeButton   {
+    position: absolute;
+    top: 639px;
+    left: 333px;
+}
+
+#itemButton     {
+    position: absolute;
+    top: 639px;
+    left: 456px;
+}
+
+#itemDiv    {
+    position: relative;
+    top: 38px;
+    left: 699px;
+    height:600px;
+    width: 80px;
+    border-radius: 2em;
+    background: grey;
+}
+
+
 
 #endFrame   {
     height: 460px;
@@ -57,58 +123,6 @@
     left: 180px;
 }
 
-.itemImage    {
-    max-width: 60px;
-    max-height: 80px;
-    position: absolute;
-    top: 400px;
-    left: 650px;
-}
-
-button  {
-    background: grey;
-    display:inline-block;
-    padding:0.3em 1.2em;
-    margin:0 0.1em 0.1em 0;
-    border:0.16em solid rgba(255,255,255,0);
-    border-radius:2em;
-    color: #d2d2d2;
-    box-sizing: border-box;
-    text-decoration:none;
-    font-family:'Roboto',sans-serif;
-    font-weight:550;
-    text-shadow: 0 0.04em 0.04em rgba(0,0,0,0.35);
-    text-align:center;
-    transition: all 0.2s;
-    cursor: pointer;
-}
-
-#greeting   {
-    font-size: 1.1em;
-    color: #d2d2d2;
-    position: absolute;
-    font-weight: 500;
-    top: 386px;
-    left: 225px;
-}
-
-#fightButton   {
-    position: absolute;
-    top: 471px;
-    left: 320px;
-}
-
-#escapeButton   {
-    position: absolute;
-    top: 471px;
-    left: 415px;
-}
-
-#itemButton     {
-    position: absolute;
-    top: 471px;
-    left: 525px;
-}
 
 .redHeart   {
     width: 20px;
@@ -139,17 +153,11 @@ button  {
 
 .samaraBase {
     position: absolute;;
-    min-width: 1000px;
-    max-width: 1050px;
-    min-height: 1000px;
-    max-height: 1050px;
+    min-width: 600px;
+    max-width: 800px;
+    min-height: 700px;
+    max-height: 800px;
 }
 
-#itemDiv    {
-    position: relative;
-    top: 100px;
-    left: 800px;
-    height:600px;
-    width: 80px;
-}
+
 
