--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -11,13 +11,14 @@
     <img class= "menuImg" th:src="@{/images/mainImg.jpg}">
     <button id="startBtn" class="startBtn"><img th:src="@{/images/startBtn.jpg}" width="50x50"></button>
     <button id="exitBtn" class="exitBtn"><img th:src="@{/images/exitBtn.jpg}" width="70x70"></button>
-    <button id="resumeBtn" class="resumeBgn"><img th:src="@{/images/resumeBtn.jpg}" width="70x70"></button>
+    <button id="resumeBtn" class="resumeBtn"><img th:src="@{/images/resumeBtn.jpg}" width="70x70"></button>
 
 </div>
 <div class="playerDiv">
     <h3>Add username</h3>
     <p>Name:<input type="text" id="name"></p>
-    <button class="btn-info" id="add-animal">Add</button>
+    <button class="btn-info" id="add-player">Add</button>
+    </div>
 <script th:src="@{webjars/jquery/3.1.1/jquery.js}"></script>
 <script th:src="@{/js/menuView.js}"></script>
 </body>
