Added more frames and buttons to the chucky route

--- a/src/main/resources/static/chucky.css
+++ b/src/main/resources/static/chucky.css
@@ -36,3 +36,22 @@
     margin-top: 120px;
     margin-left: 540px;
 }
+
+.chuckyitemBtn{
+    position: absolute;
+    min-height: 100px;
+    min-width: 100px;
+}
+
+.chuckyactBtn{
+    position: absolute;
+    min-height: 100px;
+    min-width: 100px;
+}
+
+.chuckyescapeBtn{
+    position: absolute;
+    min-height: 100px;
+    min-width: 100px;
+
+}
