--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -7,11 +7,25 @@
     width: 100%;
     min-height: 100%;
 }
+
 .indexMainDiv button{
-    position: absolute;
-    border: none;
-    cursor: pointer;
+
     background: rgba(0,0,0,0.0);
+    background: grey;
+    display:inline-block;
+    padding:0.3em 1.2em;
+    margin:0 0.1em 0.1em 0;
+    border:0.16em solid rgba(255,255,255,0);
+    border-radius:2em;
+    color: #d2d2d2;
+    box-sizing: border-box;
+    text-decoration:none;
+    font-family:'Roboto',sans-serif;
+    font-weight:550;
+    text-shadow: 0 0.04em 0.04em rgba(0,0,0,0.35);
+    text-align:center;
+    transition: all 0.2s;
+    cursor: pointer;
 }
 .startBtn{
     top:65%;
