--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -9,7 +9,7 @@
 }
 
 .indexMainDiv button{
-
+    position: absolute;
     background: rgba(0,0,0,0.0);
     background: grey;
     display:inline-block;
@@ -28,25 +28,32 @@
     cursor: pointer;
 }
 .startBtn{
-    top:65%;
-    left:47%;
+    width:17%;
+    height:6%;
+    top:68%;
+    right:39%;
 }
 .resumeBtn{
-    top:71%;
-    left:47%;
+    width:15%;
+    height:6%;
+    top:77%;
+    right:40%;
 }
 .exitBtn{
-    top:78%;
-    left:47%;
+    width:13%;
+    height:6%;
+    top:86%;
+    right:41%;
 }
 .playerDiv{
     position: absolute;
-    top:45%;
-    right:36%;
+    top:50%;
+    right:40%;
     color:white;
 }
 .btn-info{
-    right:20%;
+    right:31%;
+    top:57%;
 }
 table tr .edit {
     position: absolute;
