--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -9,10 +9,10 @@
 <body>
 <div class="indexMainDiv">
     <img class= "menuImg" th:src="@{/images/mainImg.jpg}">
-   <!-- <button id="startBtn" class="startBtn"><img th:src="@{/images/startBtn.jpg}" width="50x50"></button>
-    <button id="exitBtn" class="exitBtn"><img th:src="@{/images/exitBtn.jpg}" width="70x70"></button>
-    <button id="resumeBtn" class="resumeBtn"><img th:src="@{/images/resumeBtn.jpg}" width="70x70"></button>-->
-    <button class="btn-info" id="add-player">Add</button>
+    <button id="startBtn" class="startBtn">Start</button>
+    <button id="exitBtn" class="exitBtn">Exit</button>
+    <button id="resumeBtn" class="resumeBtn">Resume</button>
+    <button class="btn btn-info" id="add-player">Add</button>
 </div>
 <div class="playerDiv">
     <h3>Add username</h3>
