--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -30,45 +30,43 @@
 .startBtn{
     width:17%;
     height:6%;
-    top:68%;
+    top:58%;
     right:39%;
 }
 .resumeBtn{
     width:15%;
     height:6%;
-    top:77%;
+    top:68%;
     right:40%;
 }
 .exitBtn{
     width:13%;
     height:6%;
-    top:86%;
+    top:78%;
     right:41%;
 }
 .playerDiv{
     position: absolute;
     top:50%;
-    right:40%;
+    right:41%;
     color:white;
 }
 .btn-info{
-    right:31%;
-    top:57%;
+    right:35%;
+    top:49%;
 }
-table tr .edit {
+.editPlayer {
     position: absolute;
-    display: none;
+    right:28%;
+    top:49%;
 }
 
-table tr.edit .edit {
+.saveEditPlayer {
     position: absolute;
-    display: initial;
+    right:28%;
+    top:49%;
 }
 
-table tr.edit .noEdit {
-    position: absolute;
-    display: none;
-}
 
 
 
