Added chuckys turn and more images

--- a/src/main/resources/static/chucky.css
+++ b/src/main/resources/static/chucky.css
@@ -153,7 +153,7 @@
 
 .fullPageButton{
     position: absolute;
-    border: 1px black solid;
+    border: 0;
     color: transparent;
     background-color: transparent;
     top: 0px;
@@ -172,4 +172,15 @@
     min-height: 457px;
     min-width: 226px;
     margin: 0;
+}
+
+.treasureButton{
+    position: absolute;
+    border: 0;
+    color: transparent;
+    background-color: transparent;
+    top: 388px;
+    left: 550px;
+    min-height: 225px;
+    min-width: 325px;
 }
