--- a/src/main/resources/templates/annabelle.html
+++ b/src/main/resources/templates/annabelle.html
@@ -10,8 +10,9 @@
 <body>
 <div class="annabelleDiv">
     <img class="annabelleDoor" th:src="@{/images/annabelleFight/annabelleDoor.jpg}">
-    <button class="fightBtn" id="fightBtn"><img th:src="@{/images/fight_button.jpg}" width="100x100"></button>
-    <button class="escapeBtn" id="escapeBtn"><img th:src="@{/images/escape_button.jpg}" width="100x100"></button>
+    <button class="fightBtn" id="fightBtn"><img th:src="@{/images/fight_button.jpg}" ></button>
+    <button class="escapeBtn" id="escapeBtn"><img th:src="@{/images/escape_button.jpg}" ></button>
+    <button class="itemsBtn" id="itemsBtn"><img th:src="@{/images/itemsbutton.jpg}"></button>
     <p class="talkBubble1">"Annabelle's evil laughter is echoing in the room"</p>
 </div>
 <script th:src="@{webjars/jquery/3.1.1/jquery.js}"></script>
