updated css images and javascript

--- a/src/main/resources/static/annabelle.css
+++ b/src/main/resources/static/annabelle.css
@@ -24,25 +24,30 @@
     width:20%;
     left:72%;
 }
-#fightBtn,#escapeBtn,#itemsBtn{
+#fightBtn,#escapeBtn{
     position: absolute;
    /* margin-bottom: auto;*/
     border: none;
     cursor: pointer;
-    border: 0;
     background-color:transparent;
     color: transparent;
+    width: 13%;
+    height: 6.5%;
+
 }
-.AnnabelleitemBtn{
-    position: absolute;
+#escapeBtn{
+    background: url("/images/escape_button.jpg");
+    background-size: 100%;
     top: 85%;
-    left: 30%;
-    border: 0;
-    color: transparent;
-    background-color: transparent;
-    min-height: 40px;
-    min-width: 141px;
+    left: 52%;
 }
+#fightBtn{
+    background: url("/images/fight_button.jpg");
+    background-size: 100%;
+    top: 85%;
+    left: 37%;
+}
+
 .nextBtn{
     background: url("/images/nextBtn.jpg");
     top: 87%;
@@ -53,21 +58,18 @@
     position: absolute;
     cursor: pointer;
 }
-.fightBtn{
-    top: 85%;
-    left: 37%;
-    min-height: 50px;
-    min-width: 134px;
+
+/*
+.itemsBtn{
+    background: url("/images/itemsbutton.jpg");
+    top: 87%;
+    left: 42%;
+    background-size: 100%;
+    width: 13%;
+    height: 7.0%;
+    position: absolute;
+    cursor: pointer;
+
 }
-.escapeBtn{
-    top: 85%;
-    left: 52%;
-    min-height: 50px;
-    min-width: 132px;
-}
-.escapeBtn{
-    top: 85%;
-    left: 40%;
-    min-height: 40px;
-    min-width: 141px;
-}
+*/
+
