--- a/src/main/resources/templates/annabelle.html
+++ b/src/main/resources/templates/annabelle.html
@@ -16,8 +16,8 @@
 <!--    <button class="itemsBtn" id="itemsBtn"><img th:src="@{/images/itemsbutton.jpg}"width="100x100"></button>-->
     <p class="talkBubble1">"Annabelle's evil laughter is echoing in the room"</p>
 </div>
-<div class="itemsDiv" id="itemsDivDiv">
-    <button class="showItems" id="showItemsBtn">ITEMS</button>
+<div class="annabelleItemsDiv" id="itemsDivDiv">
+    <button class="showAnnabelleItems" id="showItemsBtn">ITEMS</button>
 </div>
 <script th:src="@{webjars/jquery/3.1.1/jquery.js}"></script>
 <script th:src="@{/js/annabelleView.js}"></script>
