--- a/src/main/resources/templates/annabelle.html
+++ b/src/main/resources/templates/annabelle.html
@@ -15,10 +15,12 @@
     <button class="escapeBtn" id="escapeBtn"></button>
 <!--    <button class="itemsBtn" id="itemsBtn"><img th:src="@{/images/itemsbutton.jpg}"width="100x100"></button>-->
     <p class="talkBubble1">"Annabelle's evil laughter is echoing in the room"</p>
+    <div class="itemsDiv" id="itemsDivDiv">
+    </div>
+    <button class="showItems" id="showItemsBtn">ITEMS</button>
 </div>
-<div class="annabelleItemsDiv" id="itemsDivDiv">
-    <button class="showAnnabelleItems" id="showItemsBtn">ITEMS</button>
-</div>
+
+
 <script th:src="@{webjars/jquery/3.1.1/jquery.js}"></script>
 <script th:src="@{/js/annabelleView.js}"></script>
 </body>
